--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="description" content="Aplikasi Restaurants Katalog">
+  <meta name="description" content="Aplikasi Restaurants Katalog dengan nama Raja Rasa">
   <title>Raja Rasa</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
